--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "@types/lodash": "^4.14.55",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.8",
+    "@types/proxyquire": "^1.3.27",
     "@types/request": "0.0.41",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "proxyquire": "^1.7.11"
   }
 }
