--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wechat-router",
+  "name": "wechat-distribute",
   "version": "0.0.1",
   "description": "Wechat events and messages distribution",
   "main": "dist/main.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wenwei1202/wechat-router.git"
+    "url": "git+https://github.com/wenwei1202/wechat-distribute.git"
   },
   "author": "vincent wen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/wenwei1202/wechat-router/issues"
+    "url": "https://github.com/wenwei1202/wechat-distribute/issues"
   },
-  "homepage": "https://github.com/wenwei1202/wechat-router#readme",
+  "homepage": "https://github.com/wenwei1202/wechat-distribute#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
     "camelcase": "^4.0.0",
