--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "express-xml-bodyparser": "^0.3.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
+    "raw-body": "^2.2.0",
     "request": "^2.79.0",
-    "wechat": "^2.0.3"
+    "request-promise": "^4.2.1"
   },
   "engines": {
     "node": ">=6.0"
   },
   "devDependencies": {
-    "@types/async": "^2.0.39",
     "@types/bluebird": "^3.5.2",
     "@types/chai": "^3.4.35",
+    "@types/koa": "^2.0.39",
     "@types/lodash": "^4.14.55",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.8",
     "@types/proxyquire": "^1.3.27",
-    "@types/request": "0.0.41",
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
