--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment": "^2.17.1",
     "raw-body": "^2.2.0",
     "request": "^2.79.0",
-    "request-promise": "^4.2.1"
+    "wechat-crypto": "0.0.2"
   },
   "engines": {
     "node": ">=6.0"
@@ -40,7 +40,7 @@
     "@types/node": "^7.0.8",
     "@types/proxyquire": "^1.3.27",
     "chai": "^3.5.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.1.0-alpha.1",
     "mocha": "^3.2.0",
     "proxyquire": "^1.7.11"
   }
