--- a/package.json
+++ b/package.json
@@ -37,11 +37,16 @@
     "@types/koa": "^2.0.39",
     "@types/lodash": "^4.14.55",
     "@types/mocha": "^2.2.40",
-    "@types/node": "^7.0.8",
+    "@types/node": "^7.0.33",
     "@types/proxyquire": "^1.3.27",
     "chai": "^3.5.0",
+    "ejs": "^2.5.6",
     "istanbul": "^1.1.0-alpha.1",
+    "koa": "^2.3.0",
+    "koa-router": "^7.2.1",
     "mocha": "^3.2.0",
-    "proxyquire": "^1.7.11"
+    "proxyquire": "^1.7.11",
+    "supertest": "^3.0.0",
+    "wechat-message-mock": "0.0.4"
   }
 }
