--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "wechat-distribute",
   "version": "0.0.2",
   "description": "Wechat events and messages distribution",
-  "main": "dist/main.js",
+  "main": "./dist/main.js",
+  "types": "./dist/main.d.ts",
   "scripts": {
     "pretest": "rm -rf dist/ && tsc",
     "test": "istanbul cover _mocha -- -R spec 'dist/**/*.spec.js'"
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/wenwei1202/wechat-distribute#readme",
   "dependencies": {
+    "@types/bluebird": "^3.5.8",
     "bluebird": "^3.5.0",
     "camelcase": "^4.0.0",
     "debug": "^2.6.3",
@@ -32,7 +34,6 @@
     "node": ">=6.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.2",
     "@types/chai": "^3.4.35",
     "@types/koa": "^2.0.39",
     "@types/lodash": "^4.14.55",
