--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "moment": "^2.17.1",
     "raw-body": "^2.2.0",
     "request": "^2.79.0",
-    "wechat-crypto": "0.0.2"
+    "wechat-crypto": "0.0.2",
+    "winston": "^2.3.1"
   },
   "engines": {
     "node": ">=6.0"
