--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/wenwei1202/wechat-distribute#readme",
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/bluebird": "^3.5.8",
+    "axios": "^0.16.2",
     "bluebird": "^3.5.0",
     "camelcase": "^4.0.0",
     "debug": "^2.6.3",
@@ -27,7 +29,6 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "raw-body": "^2.2.0",
-    "request": "^2.79.0",
     "wechat-crypto": "0.0.2",
     "winston": "^2.3.1"
   },
