chore(package.json): update dependencies

--- a/package.json
+++ b/package.json
@@ -46,36 +46,39 @@
   },
   "homepage": "https://github.com/wenwei1202/wechat-distribute#readme",
   "dependencies": {
-    "axios": "^0.16.2",
-    "camelcase": "^4.0.0",
-    "debug": "^2.6.3",
-    "immutable": "^4.0.0-rc.9",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
+    "@types/supertest": "^2.0.6",
+    "axios": "^0.18.0",
+    "camelcase": "^5.0.0",
+    "debug": "^4.1.0",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "raw-body": "^2.2.0",
-    "wechat-crypto": "0.0.2",
-    "winston": "^2.3.1"
+    "winston": "^3.1.0",
+    "xml2js": "^0.4.19"
   },
   "engines": {
     "node": ">=8.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
-    "@types/jest": "^21.1.2",
-    "@types/koa": "^2.0.39",
-    "@types/lodash": "^4.14.55",
-    "@types/node": "^7.0.33",
+    "@types/debug": "^0.0.31",
+    "@types/jest": "^23.3.9",
+    "@types/koa": "^2.0.46",
+    "@types/koa-router": "^7.0.33",
+    "@types/lodash": "^4.14.118",
+    "@types/node": "^10.12.5",
+    "@types/xml2js": "^0.4.3",
     "co-wechat": "^2.3.0",
-    "coveralls": "^3.0.0",
-    "ejs": "^2.5.6",
-    "jest": "^21.2.1",
-    "koa": "^2.3.0",
-    "koa-router": "^7.2.1",
-    "nyc": "^11.2.1",
-    "supertest": "^3.0.0",
-    "ts-jest": "^21.1.0",
-    "ts-node": "^4.0.2",
-    "typescript": "^2.5.3",
+    "coveralls": "^3.0.2",
+    "ejs": "^2.6.1",
+    "jest": "^23.6.0",
+    "koa": "^2.6.2",
+    "koa-router": "^7.4.0",
+    "supertest": "^3.3.0",
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.6",
     "wechat-message-mock": "^0.0.9"
   }
 }
