--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "wechat-distribute",
   "version": "0.0.7",
   "description": "Wechat events and messages distribution",
-  "main": "./dist/main.js",
-  "types": "./dist/main.d.ts",
+  "main": "./dist/server.js",
   "scripts": {
-    "test": "jest",
-    "coveralls": "jest && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "start": "node dist/server.js",
+    "build": "rm -rf dist && tsc",
+    "test": "jest"
   },
   "jest": {
     "transform": {
@@ -46,32 +46,33 @@
   },
   "homepage": "https://github.com/wenwei1202/wechat-distribute#readme",
   "dependencies": {
+    "@lurenjs/config": "^0.0.4",
     "concat-stream": "^2.0.0",
-    "debug": "^4.1.0",
+    "debug": "^4.3.3",
     "fast-xml-parser": "^4.0.3",
     "ioredis": "^4.28.5",
     "js-yaml": "^4.1.0",
     "node-fetch": "2",
     "path-to-regexp": "^6.2.0",
-    "raw-body": "^2.2.0",
-    "winston": "^3.1.0"
+    "reflect-metadata": "^0.1.13",
+    "winston": "^3.6.0"
   },
   "engines": {
     "node": ">=8.0"
   },
   "devDependencies": {
     "@types/concat-stream": "^2.0.0",
-    "@types/debug": "^0.0.31",
+    "@types/debug": "^4.1.7",
     "@types/ioredis": "^4.28.8",
-    "@types/jest": "^23.3.9",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^10.12.5",
-    "@types/supertest": "^2.0.6",
-    "coveralls": "^3.0.2",
-    "jest": "^23.6.0",
-    "supertest": "^3.3.0",
-    "ts-jest": "^23.10.4",
-    "ts-node": "^7.0.1",
+    "@types/node": "^17.0.18",
+    "@types/supertest": "^2.0.11",
+    "dotenv": "^16.0.0",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "wechat-message-mock": "^0.0.9"
   }
